# JARVIS-Arif

./: .gitignore  README.md  addition.py  apps.py  brightness.py  close_app.py  config.py  deletion.py  executor.py  guard.py  intent.py  main.py  minimize.py  mover.py  navigator.py  pyproject.toml  recorder.py  requirements.txt  run.py  scan_apps.py  server.py  setup.cfg  startup.py  stt.py  tts.py  vad_recorder.py
.claude/: settings.json
.github/workflows/: JARVIS-AI-package.yml
android/: main.py
android-app/: .gitignore  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/arif/jarvis/: MainActivity.kt  WaveformView.kt
android-app/app/src/main/res/drawable/: ic_launcher_round.xml  input_bg.xml  mic_btn_idle.xml  mic_btn_recording.xml  reply_bg.xml  swatch_bg.xml
android-app/app/src/main/res/layout/: activity_main.xml  dialog_bg_picker.xml
android-app/app/src/main/res/values/: themes.xml
jarvis_arif/: __init__.py  _power_utils.py  addition.py  android_server.py  api_setup.py  app_paths.py  apps.py  close_app.py  config.py  deletion.py  dictation.py  executor.py  guard.py  hibernate.py  intent.py  limits.py  logoff.py  main.py  minimize.py  mover.py  navigator.py  recorder.py  reminder.py  restart.py  scan_apps.py  screenshot.py  server.py  shutdown.py  sleep.py  startup.py  stt.py  tts.py  usage.py  vad_recorder.py  volume.py  weather.py  website.py
system/: main.py
