[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-arif"
version = "1.0.0"
description = "JARVIS-style Urdu voice assistant for Windows 11"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Hamza", email = "hn374919@gmail.com"}]
keywords = ["voice-assistant", "urdu", "jarvis", "windows", "ai", "speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "groq>=1.4.0",
    "piper-tts>=1.4.2",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26.4",
    "psutil>=6.1.0",
    "pygetwindow>=0.0.9",
    "pywin32>=308",
    "keyboard>=0.13.5",
    "screen-brightness-control>=0.23.0",
    "pycaw>=20240210",
    "requests>=2.32.3",
    "pillow>=10.2",
    "pyautogui>=0.9.54",
]

[project.scripts]
jarvis-arif        = "jarvis_arif.main:main"
jarvis-arif-android = "jarvis_arif.android_server:main"
jarvis-arif-scan   = "jarvis_arif.scan_apps:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_arif*"]
